# timeseries-forecasting

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  walk_forward_results.md
.github/workflows/: test.yml
docs/: architecture.md
docs/decisions/: 001-walk-forward-validation.md  002-baseline-comparison-philosophy.md
experiments/configs/: etth1_comparison.yaml
notebooks/: foundation_model_baseline.py
src/: __init__.py  cli.py
src/evaluation/: __init__.py  analysis.py  metrics.py  visualization.py
src/models/: __init__.py  baselines.py  lstm.py  mc_dropout.py  statistical.py  transformer.py
src/training/: __init__.py  config.py  trainer.py  walk_forward.py
tests/integration/: test_pipeline.py
tests/unit/: test_features.py  test_metrics.py  test_models.py  test_normalize.py  test_splits.py
